--- a/index.html
+++ b/index.html
@@ -1,73 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Naveen Sharma | Data Analyst</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #333;
-    }
-
-    header {
-      background: #0077b6;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    section {
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-    }
-
-    h2 {
-      color: #0077b6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #e0e0e0;
-      margin-top: 2rem;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Naveen Sharma | Data Analyst Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+        header {
+            background-color: #4CAF50;
+            padding: 20px;
+            text-align: center;
+            color: white;
+        }
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .header-content a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #4CAF50;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            padding: 8px;
+            border-bottom: 1px solid #ddd;
+        }
+        li a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        li a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <h1>Naveen Sharma</h1>
-    <p>Aspiring Data Analyst | Passionate about turning data into insights</p>
-  </header>
+<header>
+    <div class="header-content">
+        <div>
+            <h1>Naveen Sharma | Data Analyst</h1>
+        </div>
+        <div>
+            <a href="mailto:nsharma41422@gmail.com">Email Me</a> |
+            <a href="https://www.linkedin.com/in/naveen-sharma" target="_blank">LinkedIn</a> |
+            <a href="path/to/your/resume.pdf" target="_blank">Resume</a>
+        </div>
+    </div>
+</header>
 
-  <section>
-    <h2>Education</h2>
-    <p>Details coming soon.</p>
-  </section>
+<section>
+    <h2>About Me</h2>
+    <p>I'm a Data Analyst passionate about data visualization, analysis, and finding insights from complex data sets. I have a background in computer science, with hands-on experience in data manipulation, analysis, and visualization using various tools and technologies.</p>
+</section>
 
-  <section>
-    <h2>Projects</h2>
-    <p>Details coming soon.</p>
-  </section>
-
-  <section>
-    <h2>Certifications</h2>
-    <p>Details coming soon.</p>
-  </section>
-
-  <section>
-    <h2>Resume</h2>
-    <p><a href="#">View or Download Resume (coming soon)</a></p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Naveen Sharma</p>
-  </footer>
+<section>
+    <h2>Licenses & Certifications</h2>
+    <ul>
+        <li><strong>Excel Basics for Data Analysis</strong> - <a href="https://www.ibm.com/certify" target="_blank">IBM</a> - Issued Feb 2025</li>
+        <li><strong>Explore Core Data Concepts in Microsoft Azure</strong> - <a href="https://www.microsoft.com/en-us/learning" target="_blank">Microsoft</a> - Issued Feb 2025</li>
+        <li><strong>Food Handler</strong> - <a href="https://www.foodsafetytraining.com" target="_blank">Food Safety Training</a> - Issued Feb 2025</li>
+        <li><strong>Overview of Data Visualization</strong> - <a href="https://www.coursera.org" target="_blank">Coursera Project Network</a> - Issued Feb 2025</li>
+        <li><strong>Intermediate Relational Database and SQL</strong> - <a href="https://www.coursera.org" target="_blank">Coursera Project Network</a> - Issued Jun 2024</li>
+        <li><strong>Internship Preparation - Certificate Workshop</strong> - <a href="https://www.cloudcounselage.com" target="_blank">Cloud Counselage Pvt. Ltd.</a> - Issued Jun 2024</li>
+        <li><strong>Introduction to Relational Database and SQL</strong> - <a href="https://www.coursera.org" target="_blank">Coursera Project Network</a> - Issued Jun 2024</li>
+    </ul>
+</section>
 
 </body>
 </html>
