--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #f9f9f9; /* Light gray background */
+            color: #333; /* Dark text for readability */
         }
         header {
-            background-color: #4CAF50;
+            background-color: #2C3E50; /* Dark blue for header */
             padding: 20px;
             text-align: center;
             color: white;
@@ -22,6 +22,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
         }
         .header-content a {
             color: white;
@@ -29,14 +31,15 @@
             font-weight: bold;
         }
         section {
-            margin: 20px;
+            margin: 20px auto;
             padding: 20px;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 1200px;
         }
-        h2 {
-            color: #4CAF50;
+        h1, h2 {
+            color: #2C3E50; /* Dark blue color for headers */
         }
         ul {
             list-style: none;
@@ -47,11 +50,15 @@
             border-bottom: 1px solid #ddd;
         }
         li a {
-            color: #007bff;
+            color: #2980B9; /* Soft blue for links */
             text-decoration: none;
         }
         li a:hover {
             text-decoration: underline;
+        }
+        .header-content div {
+            display: flex;
+            gap: 15px;
         }
     </style>
 </head>
@@ -64,7 +71,7 @@
         </div>
         <div>
             <a href="mailto:nsharma41422@gmail.com">Email Me</a> |
-            <a href="https://www.linkedin.com/in/naveen-sharma" target="_blank">LinkedIn</a> |
+            <a href="https://www.linkedin.com/in/naveensharma09" target="_blank">LinkedIn</a> |
             <a href="path/to/your/resume.pdf" target="_blank">Resume</a>
         </div>
     </div>
