--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div>
             <a href="mailto:nsharma41422@gmail.com">Email Me</a> |
             <a href="https://www.linkedin.com/in/naveensharma09" target="_blank">LinkedIn</a> |
-            <a href="path/to/your/resume.pdf" target="_blank">Resume</a>
+            <a href="Naveen_Sharma _Resume.pdf" target="_blank">Resume</a>
         </div>
     </div>
 </header>
