--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div>
             <a href="mailto:nsharma41422@gmail.com">Email Me</a> |
             <a href="https://www.linkedin.com/in/naveensharma09" target="_blank">LinkedIn</a> |
-            <a href="https://naveensharma.github.io/Naveen_Sharma_Resume.pdf" target="_blank">Resume</a>
+            <a href="https://github.com/naveensharma/naveensharma.github.io/raw/main/Naveen_Sharma_Resume.pdf" target="_blank">Resume</a>
         </div>
     </div>
 </header>
