--- a/index.html
+++ b/index.html
@@ -47,48 +47,48 @@
     </div>
     <a href="projects.html" class="btn">View More Projects</a>
   </section>
+
   <section id="certifications" class="projects">
-  <h2>Licenses & Certifications</h2>
-  <div class="project-grid">
+    <h2>Licenses & Certifications</h2>
+    <div class="project-grid">
 
-    <div class="project-card">
-      <img src="images/coursera-logo.png" alt="Coursera Logo">
-      <h3>Intermediate Relational Database and SQL</h3>
-      <p>By: Coursera | Grade: 84%</p>
-      <a href="https://coursera.org/share/c0f078bd7c808f53aa2b5877441d46cf" target="_blank" class="btn">View Certificate</a>
+      <div class="project-card">
+        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <h3>Excel Basics for Data Analysis</h3>
+        <p>By: Coursera | Grade: 98.75%</p>
+        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <div class="project-card">
+        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
+        <p>By: Microsoft | Grade: 92.26%</p>
+        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <div class="project-card">
+        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <h3>Introduction to Relational Database and SQL</h3>
+        <p>By: Coursera | Grade: 80%</p>
+        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <div class="project-card">
+        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <h3>KL88LLYFXLP8</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <div class="project-card">
+        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <h3>ZF3MM8LS59W8</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
     </div>
-
-    <div class="project-card">
-      <img src="images/coursera-logo.png" alt="Coursera Logo">
-      <h3>Overview of Data Visualization</h3>
-      <p>By: Coursera Project Network | Grade: 100%</p>
-      <a href="https://coursera.org/share/8fb889176d59715c045fc6d6d0514ab1" target="_blank" class="btn">View Certificate</a>
-    </div>
-
-    <div class="project-card">
-      <img src="images/azure-logo.png" alt="Microsoft Logo">
-      <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-      <p>By: Microsoft | Grade: 92.26%</p>
-      <a href="https://coursera.org/share/5732e628bb35fda77e16cd8a49403db6" target="_blank" class="btn">View Certificate</a>
-    </div>
-
-    <div class="project-card">
-      <img src="images/ibm-logo.png" alt="IBM Logo">
-      <h3>Excel Basics for Data Analysis</h3>
-      <p>By: IBM | Grade: 98.75%</p>
-      <a href="https://coursera.org/share/8674688aed2be6cda6227d4b93f0eaf4" target="_blank" class="btn">View Certificate</a>
-    </div>
-
-    <div class="project-card">
-      <img src="images/coursera-logo.png" alt="Coursera Logo">
-      <h3>Introduction to Relational Database and SQL</h3>
-      <p>By: Deprecated Guided Projects | Grade: 80%</p>
-      <a href="https://coursera.org/share/d3b01a8b2f35891d913d3db15017ffe4" target="_blank" class="btn">View Certificate</a>
-    </div>
-
-  </div>
-</section>
-
+  </section>
 
   <footer class="footer" id="contact">
     <h3>Contact</h3>
