--- a/index.html
+++ b/index.html
@@ -53,36 +53,38 @@
     <div class="project-grid">
 
       <div class="project-card">
-        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Excel Basics for Data Analysis</h3>
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
 
       <div class="project-card">
-        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
         <p>By: Microsoft | Grade: 92.26%</p>
         <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
 
       <div class="project-card">
-        <img src="images/coursera logo.svg" alt="Coursera Logo">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera | Grade: 80%</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
 
       <div class="project-card">
-        <img src="images/coursera logo.svg" alt="Coursera Logo">
-        <h3>KL88LLYFXLP8</h3>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+        <h3>Overview of Data Visualization
+</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
 
       <div class="project-card">
-        <img src="images/coursera logo.svg" alt="Coursera Logo">
-        <h3>ZF3MM8LS59W8</h3>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+        <h3>Intermediate Relational Database and SQL
+</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
