--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <footer class="footer" id="contact">
     <h3>Contact</h3>
     <p>Email: <a href="mailto:nsharma41422@gmail.com">nsharma41422@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/naveen--sharma" target="_blank">linkedin.com/in/naveen--sharma</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/naveensharma09" target="_blank">linkedin.com/in/naveen--sharma</a></p>
   </footer>
 </body>
 </html>
