--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Naveen Sharma | Data Analyst</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
   <header class="header">
