--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
     <h3>Contact</h3>
     <p>Email: <a href="mailto:nsharma41422@gmail.com">nsharma41422@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/naveensharma09" target="_blank">linkedin.com/in/naveen--sharma</a></p>
+    <div class="social-icons">
+  <a href="mailto:your.email@example.com" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i></a>
+  <a href="https://www.linkedin.com/in/your-linkedin" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+  <a href="https://github.com/your-github" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+</div>
+
   </footer>
 </body>
 </html>
