--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header class="header">
+  <header class="header" id="main-header">
     <div class="logo">Naveen Sharma</div>
     <nav class="nav">
       <a href="#">Home</a>
       <a href="#projects">Projects</a>
       <a href="#certifications">Licenses & Certifications</a>
-      <a href="#contact">Contact</a>
+      <a href="#contact">Get in touch</a>
       <button id="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" id="hero">
     <div class="hero-content">
-      <h1>Hi, I'm Naveen Sharma</h1>
-      <p>A Data Analyst turning complex data into actionable insights</p>
+      <h1 class="hello">Hello</h1>
+      <p class="tagline">I’m Naveen, and I analyze data to deliver insights and drive smart business decisions.</p>
     </div>
   </section>
 
@@ -53,55 +53,46 @@
   <section id="certifications" class="projects">
     <h2>Licenses & Certifications</h2>
     <div class="project-grid">
-
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Excel Basics for Data Analysis</h3>
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
         <p>By: Microsoft | Grade: 92.26%</p>
         <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera | Grade: 80%</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Overview of Data Visualization
-</h3>
+        <h3>Overview of Data Visualization</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Intermediate Relational Database and SQL
-</h3>
+        <h3>Intermediate Relational Database and SQL</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-
     </div>
   </section>
 
   <footer class="footer" id="contact">
-    <h3>Contact</h3>
+    <h3>Get in touch</h3>
     <div class="social-icons">
-  <a href="mailto:nsharma41422@gmail.com" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i></a>
-  <a href="https://www.linkedin.com/in/naveensharma09" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-  <a href="https://github.com/NaveenSharma09" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-</div>
-
+      <a href="mailto:nsharma41422@gmail.com" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/naveensharma09" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/NaveenSharma09" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+    </div>
   </footer>
 </body>
 </html>
