--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1 class="hello">Hello</h1>
-      <p class="tagline">I’m Naveen, and I analyze data to deliver insights and drive smart business decisions.</p>
+      <p class="tagline">I'm Naveen, a data analyst turning data into direction.</p>
     </div>
   </section>
 
