--- a/index.html
+++ b/index.html
@@ -50,41 +50,56 @@
     <a href="projects.html" class="btn">View More Projects</a>
   </section>
 
-  <section id="certifications" class="projects">
-    <h2>Licenses & Certifications</h2>
-    <div class="project-grid">
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+<section id="certifications" class="certifications">
+  <h2>Licenses & Certifications</h2>
+  <ol class="cert-list">
+    <li>
+      <div class="cert-header">
         <h3>Excel Basics for Data Analysis</h3>
-        <p>By: Coursera | Grade: 98.75%</p>
-        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
       </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+      <p>By: Coursera | Grade: 98.75%</p>
+      <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+    </li>
+
+    <li>
+      <div class="cert-header">
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Microsoft | Grade: 92.26%</p>
-        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
       </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+      <p>By: Microsoft | Grade: 92.26%</p>
+      <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+    </li>
+
+    <li>
+      <div class="cert-header">
         <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera | Grade: 80%</p>
-        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
       </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+      <p>By: Coursera | Grade: 80%</p>
+      <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+    </li>
+
+    <li>
+      <div class="cert-header">
         <h3>Overview of Data Visualization</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
       </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+      <p>By: Coursera</p>
+      <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+    </li>
+
+    <li>
+      <div class="cert-header">
         <h3>Intermediate Relational Database and SQL</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
       </div>
-    </div>
-  </section>
+      <p>By: Coursera</p>
+      <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+    </li>
+  </ol>
+</section>
+
 
   <footer class="footer" id="contact">
     <h3>Get in touch</h3>
