--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1 class="hello">Hello</h1>
-      <p class="tagline">I'm Naveen, a data analyst turning data into direction.</p>
+      <p class="tagline">I’m Naveen, a data analyst turning data into direction to drive actionable business decisions.</p>
     </div>
   </section>
 
@@ -34,72 +34,57 @@
       <div class="project-card">
         <img src="images/dashboard1.png" alt="Sales Dashboard"/>
         <h3>Sales Data Dashboard</h3>
-        <p>Sales oflra Dashboard</p>
+        <p>Sales Data Visualization Dashboard</p>
       </div>
       <div class="project-card">
         <img src="images/dashboard2.png" alt="Customer Segmentation"/>
         <h3>Customer Segmentation</h3>
-        <p>Customer Segmentation</p>
+        <p>Customer Segmentation Analysis</p>
       </div>
       <div class="project-card">
         <img src="images/dashboard3.png" alt="Financial Forecasting"/>
         <h3>Financial Forecasting</h3>
-        <p>Financial Forcaasting</p>
+        <p>Financial Forecasting Model</p>
       </div>
     </div>
     <a href="projects.html" class="btn">View More Projects</a>
   </section>
 
-<section id="certifications" class="certifications">
-  <h2>Licenses & Certifications</h2>
-  <ol class="cert-list">
-    <li>
-      <div class="cert-header">
+  <section id="certifications" class="certifications">
+    <h2>Licenses & Certifications</h2>
+    <div class="certification-grid">
+      <div class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Excel Basics for Data Analysis</h3>
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
+        <p>By: Coursera | Grade: 98.75%</p>
+        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <p>By: Coursera | Grade: 98.75%</p>
-      <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-    </li>
-
-    <li>
-      <div class="cert-header">
+      <div class="certification-card">
+        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo">
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
+        <p>By: Microsoft | Grade: 92.26%</p>
+        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <p>By: Microsoft | Grade: 92.26%</p>
-      <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-    </li>
-
-    <li>
-      <div class="cert-header">
+      <div class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Introduction to Relational Database and SQL</h3>
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
+        <p>By: Coursera | Grade: 80%</p>
+        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <p>By: Coursera | Grade: 80%</p>
-      <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-    </li>
-
-    <li>
-      <div class="cert-header">
+      <div class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Overview of Data Visualization</h3>
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <p>By: Coursera</p>
-      <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-    </li>
-
-    <li>
-      <div class="cert-header">
+      <div class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Intermediate Relational Database and SQL</h3>
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="cert-logo" />
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <p>By: Coursera</p>
-      <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-    </li>
-  </ol>
-</section>
-
+    </div>
+  </section>
 
   <footer class="footer" id="contact">
     <h3>Get in touch</h3>
