--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1 class="hello">Hello</h1>
-      <p class="tagline">I’m Naveen, a data analyst turning data into direction to drive actionable business decisions.</p>
+      <p class="tagline">I'm Naveen, a data analyst turning data into direction to drive actionable business decisions.</p>
     </div>
   </section>
 
@@ -52,38 +52,32 @@
 
   <section id="certifications" class="certifications">
     <h2>Licenses & Certifications</h2>
-    <div class="certification-grid">
-      <div class="certification-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+    <ul class="certification-list">
+      <li class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="logo-img">
         <h3>Excel Basics for Data Analysis</h3>
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="certification-card">
-        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo">
+      </li>
+      <li class="certification-card">
+        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" class="logo-img">
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
         <p>By: Microsoft | Grade: 92.26%</p>
         <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="certification-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+      </li>
+      <li class="certification-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" class="logo-img">
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera | Grade: 80%</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="certification-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Overview of Data Visualization</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="certification-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Intermediate Relational Database and SQL</h3>
-        <p>By: Coursera</p>
+      </li>
+      <li class="certification-card">
+        <img src="certificates/ibm logo.svg" alt="IBM Logo" class="logo-img">
+        <h3>Excel Basics for Data Analysis</h3>
+        <p>By: IBM</p>
         <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-    </div>
+      </li>
+    </ul>
   </section>
 
   <footer class="footer" id="contact">
