--- a/index.html
+++ b/index.html
@@ -17,35 +17,23 @@
       <a href="#projects">Projects</a>
       <a href="#certifications">Licenses & Certifications</a>
       <a href="#contact">Get in touch</a>
-      <button id="dark-toggle" aria-label="Toggle Dark Mode">🌙</button>
+      <button id="dark-toggle" aria-label="Toggle Dark Mode">
+        <i id="toggle-icon" class="fas fa-moon"></i>
+      </button>
     </nav>
   </header>
 
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1 class="hello">Hello</h1>
-      <p class="tagline">I'm Naveen, a data analyst turning data into direction.</p>
+      <p class="tagline">I’m Naveen, a data analyst turning data into direction.</p>
     </div>
   </section>
 
   <section id="projects" class="projects">
     <h2>Example Projects</h2>
     <div class="project-grid">
-      <div class="project-card">
-        <img src="images/dashboard1.png" alt="Sales Dashboard"/>
-        <h3>Sales Data Dashboard</h3>
-        <p>Sales oflra Dashboard</p>
-      </div>
-      <div class="project-card">
-        <img src="images/dashboard2.png" alt="Customer Segmentation"/>
-        <h3>Customer Segmentation</h3>
-        <p>Customer Segmentation</p>
-      </div>
-      <div class="project-card">
-        <img src="images/dashboard3.png" alt="Financial Forecasting"/>
-        <h3>Financial Forecasting</h3>
-        <p>Financial Forcaasting</p>
-      </div>
+      <!-- Your project details here -->
     </div>
     <a href="projects.html" class="btn">View More Projects</a>
   </section>
@@ -53,36 +41,14 @@
   <section id="certifications" class="projects">
     <h2>Licenses & Certifications</h2>
     <div class="project-grid">
+      <!-- Coursera Certifications -->
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo">
         <h3>Excel Basics for Data Analysis</h3>
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <div class="project-card">
-        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo">
-        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Microsoft | Grade: 92.26%</p>
-        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera | Grade: 80%</p>
-        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Overview of Data Visualization</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Intermediate Relational Database and SQL</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
+      <!-- Other certifications -->
     </div>
   </section>
 
