--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <!-- Other certifications -->
+      <!-- Add other certifications as necessary -->
     </div>
   </section>
 
