--- a/index.html
+++ b/index.html
@@ -48,7 +48,37 @@
         <p>By: Coursera | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
       </div>
-      <!-- Add other certifications as necessary -->
+      
+      <div class="project-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
+        <p>By: Coursera | Grade: 95%</p>
+        <a href="certificates/Coursera Explore Core Data Concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <div class="project-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
+        <h3>Introduction to Relational Database and SQL</h3>
+        <p>By: Coursera | Grade: 91%</p>
+        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <!-- IBM Certification -->
+      <div class="project-card">
+        <img src="certificates/IBM logo.svg" alt="IBM Logo">
+        <h3>Excel Basics for Data Analysis</h3>
+        <p>By: IBM</p>
+        <a href="certificates/IBM Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
+      <!-- Microsoft Certification -->
+      <div class="project-card">
+        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo">
+        <h3>Microsoft Azure Core Data Concepts</h3>
+        <p>By: Microsoft</p>
+        <a href="certificates/Coursera Explore Core Data Concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
+      </div>
+
     </div>
   </section>
 
@@ -62,3 +92,4 @@
   </footer>
 </body>
 </html>
+
