--- a/index.html
+++ b/index.html
@@ -23,64 +23,48 @@
     </nav>
   </header>
 
-  <section class="hero" id="hero">
-    <div class="hero-content">
-      <h1 class="hello">Hello</h1>
-      <p class="tagline">I’m Naveen, a data analyst turning data into direction.</p>
+ <section class="hero" id="hero">
+  <div class="hero-content">
+    <h1>Hello</h1>
+    <p>I'm Naveen, a data analyst turning data into direction.</p>
+  </div>
+</section>
+
+<section id="certifications" class="projects">
+  <h2>Licenses & Certifications</h2>
+  <div class="project-grid">
+    <div class="project-card">
+      <img src="IBM logo.svg" alt="IBM Logo" />
+      <h3>Excel Basics for Data Analysis</h3>
+      <p>By: IBM | Grade: 98.75%</p>
+      <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
     </div>
-  </section>
-
-  <section id="projects" class="projects">
-    <h2>Example Projects</h2>
-    <div class="project-grid">
-      <!-- Your project details here -->
+    <div class="project-card">
+      <img src="Microsoft logo.png" alt="Microsoft Logo" />
+      <h3>Explore Core Data Concepts in Microsoft Azure</h3>
+      <p>By: Microsoft | Grade: 92.26%</p>
+      <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
     </div>
-    <a href="projects.html" class="btn">View More Projects</a>
-  </section>
-
-  <section id="certifications" class="projects">
-    <h2>Licenses & Certifications</h2>
-    <div class="project-grid">
-      <!-- Coursera Certifications -->
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Excel Basics for Data Analysis</h3>
-        <p>By: Coursera | Grade: 98.75%</p>
-        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-      
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Coursera | Grade: 95%</p>
-        <a href="certificates/Coursera Explore Core Data Concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo">
-        <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera | Grade: 91%</p>
-        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-
-      <!-- IBM Certification -->
-      <div class="project-card">
-        <img src="certificates/IBM logo.svg" alt="IBM Logo">
-        <h3>Excel Basics for Data Analysis</h3>
-        <p>By: IBM</p>
-        <a href="certificates/IBM Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-
-      <!-- Microsoft Certification -->
-      <div class="project-card">
-        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo">
-        <h3>Microsoft Azure Core Data Concepts</h3>
-        <p>By: Microsoft</p>
-        <a href="certificates/Coursera Explore Core Data Concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate (PDF)</a>
-      </div>
-
+    <div class="project-card">
+      <img src="coursera logo.svg" alt="Coursera Logo" />
+      <h3>Introduction to Relational Database and SQL</h3>
+      <p>By: Coursera | Grade: 80%</p>
+      <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
     </div>
-  </section>
+    <div class="project-card">
+      <img src="coursera logo.svg" alt="Coursera Logo" />
+      <h3>Overview of Data Visualization</h3>
+      <p>By: Coursera</p>
+      <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
+    </div>
+    <div class="project-card">
+      <img src="coursera logo.svg" alt="Coursera Logo" />
+      <h3>Intermediate Relational Database and SQL</h3>
+      <p>By: Coursera</p>
+      <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
+    </div>
+  </div>
+</section>
 
   <footer class="footer" id="contact">
     <h3>Get in touch</h3>
