--- a/index.html
+++ b/index.html
@@ -34,31 +34,31 @@
     <h2>Licenses & Certifications</h2>
     <div class="project-grid">
       <div class="project-card">
-        <img src="IBM logo.svg" alt="IBM Logo" />
+        <img src="certificates/IBM logo.svg" alt="IBM Logo" />
         <h3>Excel Basics for Data Analysis</h3>
         <p>By: IBM | Grade: 98.75%</p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
-        <img src="Microsoft logo.png" alt="Microsoft Logo" />
+        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" />
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
         <p>By: Microsoft | Grade: 92.26%</p>
         <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
-        <img src="coursera logo.svg" alt="Coursera Logo" />
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera | Grade: 80%</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
-        <img src="coursera logo.svg" alt="Coursera Logo" />
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Overview of Data Visualization</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
-        <img src="coursera logo.svg" alt="Coursera Logo" />
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Intermediate Relational Database and SQL</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
