--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#certifications">Licenses & Certifications</a>
       <a href="#contact">Get in touch</a>
       <button id="dark-toggle" aria-label="Toggle Dark Mode">
-        <i id="toggle-icon" class="fas fa-moon"></i>
+        <i id="toggle-icon" class="fas fa-moon"></i> <!-- Font Awesome moon icon -->
       </button>
     </nav>
   </header>
