--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
       <div class="project-card">
         <img src="certificates/IBM logo.svg" alt="IBM Logo" />
         <h3>Excel Basics for Data Analysis</h3>
-        <p>By: IBM | Grade: 98.75%</p>
+        <p>By: IBM </p>
         <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
         <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" />
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Microsoft | Grade: 92.26%</p>
+        <p>By: Microsoft </p>
         <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera | Grade: 80%</p>
+        <p>By: Coursera </p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
       <div class="project-card">
