--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1>Hello</h1>
-      <p>Data Analyst Specializing in Transforming Data into Actionable Insights.</p>
+      <p> Analyst Specializing in Transforming Data into Actionable Insights.</p>
     </div>
   </section>
 
