--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div class="logo">Naveen Sharma</div>
     <nav class="nav">
       <a href="#">Home</a>
-      <a href="#projects">Projects</a>
       <a href="#certifications">Licenses & Certifications</a>
       <a href="#contact">Get in touch</a>
     </nav>
@@ -23,7 +22,7 @@
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1>Hello</h1>
-      <p> Analyst Specializing in Transforming Data into Actionable Insights.</p>
+      <p>Analyst Specializing in Transforming Data into Actionable Insights.</p>
     </div>
   </section>
 
@@ -33,32 +32,41 @@
       <div class="project-card">
         <img src="certificates/IBM logo.svg" alt="IBM Logo" />
         <h3>Excel Basics for Data Analysis</h3>
-        <p>By: IBM </p>
-        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
+        <p><strong>Offered by:</strong> IBM on Coursera</p>
+        <p><strong>Skills Gained:</strong> Excel functions, data cleaning, data visualization, pivot tables, and charts</p>
+        <a href="certificates/Coursera%20Excel%20Basics%20for%20Data%20Analysis.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
+
       <div class="project-card">
         <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" />
         <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Microsoft </p>
-        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
+        <p><strong>Offered by:</strong> Microsoft on Coursera</p>
+        <p><strong>Skills Gained:</strong> Data types, relational and non-relational data, big data fundamentals, Azure data services</p>
+        <a href="certificates/Coursera%20Explore%20core%20data%20concepts%20in%20Microsoft%20Azure.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
+
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera </p>
-        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
+        <p><strong>Offered by:</strong> Coursera</p>
+        <p><strong>Skills Gained:</strong> Database design, ER diagrams, SQL querying (SELECT, JOIN, GROUP BY), MySQL basics</p>
+        <a href="certificates/Coursera%20Introduction%20to%20Relational%20Database%20and%20SQL.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
+
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Overview of Data Visualization</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
+        <p><strong>Offered by:</strong> Coursera</p>
+        <p><strong>Skills Gained:</strong> Fundamentals of data visualization, storytelling with data, best practices in chart design</p>
+        <a href="certificates/Coursera%20KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
+
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Intermediate Relational Database and SQL</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
+        <p><strong>Offered by:</strong> Coursera</p>
+        <p><strong>Skills Gained:</strong> Advanced SQL (subqueries, constraints, views), normalization, relational schema design</p>
+        <a href="certificates/Coursera%20ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
     </div>
   </section>
