--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+  <!-- Header Section -->
   <header class="header" id="main-header">
     <div class="logo">Naveen Sharma</div>
     <nav class="nav">
@@ -19,22 +20,95 @@
     </nav>
   </header>
 
+  <!-- Hero Section -->
   <section class="hero" id="hero">
     <div class="hero-content">
       <h1>Hello</h1>
-      <p> Analyst Specializing in Transforming Data into Actionable Insights.</p>
+      <p>Analyst Specializing in Transforming Data into Actionable Insights.</p>
     </div>
   </section>
 
+  <!-- Certifications Section -->
   <section id="certifications" class="projects">
     <h2>Licenses & Certifications</h2>
     <div class="project-grid">
-      <!-- Add certification details as before -->
+      <!-- Certification 1 -->
+      <div class="project-card">
+        <img src="certificates/IBM logo.svg" alt="IBM Logo" />
+        <h3>Excel Basics for Data Analysis</h3>
+        <p>By: IBM</p>
+        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 2 -->
+      <div class="project-card">
+        <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" />
+        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
+        <p>By: Microsoft</p>
+        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 3 -->
+      <div class="project-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
+        <h3>Introduction to Relational Database and SQL</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 4 -->
+      <div class="project-card">
+        <img src="certificates/IBM logo.svg" alt="IBM Logo" />
+        <h3>Data Science Professional Certificate</h3>
+        <p>By: IBM</p>
+        <a href="certificates/Coursera Data Science Professional Certificate.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 5 -->
+      <div class="project-card">
+        <img src="certificates/Google logo.png" alt="Google Logo" />
+        <h3>Google Data Analytics Professional Certificate</h3>
+        <p>By: Google</p>
+        <a href="certificates/Coursera Google Data Analytics Professional Certificate.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 6 -->
+      <div class="project-card">
+        <img src="certificates/Harvard logo.svg" alt="Harvard Logo" />
+        <h3>Data Science: R Basics</h3>
+        <p>By: Harvard University</p>
+        <a href="certificates/Coursera Data Science R Basics.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 7 -->
+      <div class="project-card">
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
+        <h3>Introduction to Data Science with Python</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera Introduction to Data Science with Python.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 8 -->
+      <div class="project-card">
+        <img src="certificates/Stanford logo.png" alt="Stanford Logo" />
+        <h3>Machine Learning Foundations: A Case Study Approach</h3>
+        <p>By: Stanford University</p>
+        <a href="certificates/Coursera Machine Learning Foundations Case Study.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
+
+      <!-- Certification 9 -->
+      <div class="project-card">
+        <img src="certificates/LinkedIn logo.svg" alt="LinkedIn Logo" />
+        <h3>Learning Data Analytics</h3>
+        <p>By: LinkedIn</p>
+        <a href="certificates/LinkedIn Learning Data Analytics.pdf" target="_blank" class="btn">View Certificate</a>
+      </div>
     </div>
   </section>
 
+  <!-- Footer Section (Contact) -->
   <footer class="footer" id="contact">
-    <h3>Get in touch</h3>
+    <h3>Get in Touch</h3>
     <div class="social-icons">
       <a href="mailto:nsharma41422@gmail.com" target="_blank" aria-label="Email">
         <i class="fas fa-envelope"></i>
