--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav">
       <a href="#">Home</a>
       <a href="#certifications">Licenses & Certifications</a>
-      <a href="#contact">Contact</a> <!-- Updated text here -->
+      <a href="#contact">Contact</a>
     </nav>
   </header>
 
@@ -61,7 +61,7 @@
         <img src="certificates/IBM logo.svg" alt="IBM Logo" />
         <h3>Data Science Professional Certificate</h3>
         <p>By: IBM</p>
-        <a href="certificates/Coursera Data Science Professional Certificate.pdf" target="_blank" class="btn">View Certificate</a>
+        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
 
       <!-- Certification 5 -->
@@ -69,39 +69,7 @@
         <img src="certificates/Google logo.png" alt="Google Logo" />
         <h3>Google Data Analytics Professional Certificate</h3>
         <p>By: Google</p>
-        <a href="certificates/Coursera Google Data Analytics Professional Certificate.pdf" target="_blank" class="btn">View Certificate</a>
-      </div>
-
-      <!-- Certification 6 -->
-      <div class="project-card">
-        <img src="certificates/Harvard logo.svg" alt="Harvard Logo" />
-        <h3>Data Science: R Basics</h3>
-        <p>By: Harvard University</p>
-        <a href="certificates/Coursera Data Science R Basics.pdf" target="_blank" class="btn">View Certificate</a>
-      </div>
-
-      <!-- Certification 7 -->
-      <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
-        <h3>Introduction to Data Science with Python</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera Introduction to Data Science with Python.pdf" target="_blank" class="btn">View Certificate</a>
-      </div>
-
-      <!-- Certification 8 -->
-      <div class="project-card">
-        <img src="certificates/Stanford logo.png" alt="Stanford Logo" />
-        <h3>Machine Learning Foundations: A Case Study Approach</h3>
-        <p>By: Stanford University</p>
-        <a href="certificates/Coursera Machine Learning Foundations Case Study.pdf" target="_blank" class="btn">View Certificate</a>
-      </div>
-
-      <!-- Certification 9 -->
-      <div class="project-card">
-        <img src="certificates/LinkedIn logo.svg" alt="LinkedIn Logo" />
-        <h3>Learning Data Analytics</h3>
-        <p>By: LinkedIn</p>
-        <a href="certificates/LinkedIn Learning Data Analytics.pdf" target="_blank" class="btn">View Certificate</a>
+        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
     </div>
   </section>
