--- a/index.html
+++ b/index.html
@@ -35,48 +35,48 @@
       <!-- Certification 1 -->
       <div class="project-card">
         <img src="certificates/IBM logo.svg" alt="IBM Logo" />
-        <h3>Excel Basics for Data Analysis</h3>
-        <p>By: IBM</p>
-        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
+        <h3>Intermediate Relational Database and SQL</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera Intermediate Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
 
       <!-- Certification 2 -->
       <div class="project-card">
         <img src="certificates/Microsoft logo.png" alt="Microsoft Logo" />
-        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
-        <p>By: Microsoft</p>
-        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
+        <h3>Overview of Data Visualization</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera Overview of Data Visualization.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
 
       <!-- Certification 3 -->
       <div class="project-card">
         <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
-        <h3>Introduction to Relational Database and SQL</h3>
-        <p>By: Coursera</p>
-        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
+        <h3>Explore Core Data Concepts in Microsoft Azure</h3>
+        <p>By: Microsoft</p>
+        <a href="certificates/Coursera Explore core data concepts in Microsoft Azure.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
 
       <!-- Certification 4 -->
       <div class="project-card">
         <img src="certificates/IBM logo.svg" alt="IBM Logo" />
-        <h3>Data Science Professional Certificate</h3>
+        <h3>Excel Basics for Data Analysis</h3>
         <p>By: IBM</p>
-        <a href="certificates/Coursera KL88LLYFXLP8.pdf" target="_blank" class="btn">View Certificate</a>
+        <a href="certificates/Coursera Excel Basics for Data Analysis.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
 
       <!-- Certification 5 -->
       <div class="project-card">
         <img src="certificates/Google logo.png" alt="Google Logo" />
-        <h3>Google Data Analytics Professional Certificate</h3>
-        <p>By: Google</p>
-        <a href="certificates/Coursera ZF3MM8LS59W8.pdf" target="_blank" class="btn">View Certificate</a>
+        <h3>Introduction to Relational Database and SQL</h3>
+        <p>By: Coursera</p>
+        <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
       </div>
     </div>
   </section>
 
   <!-- Footer Section (Contact) -->
   <footer class="footer" id="contact">
-    <h3>Get in Touch</h3>
+    <h3>Get in Touch!</h3>
     <div class="social-icons">
       <a href="mailto:nsharma41422@gmail.com" target="_blank" aria-label="Email">
         <i class="fas fa-envelope"></i>
