--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <!-- Certification 5 -->
       <div class="project-card">
-        <img src="certificates/Google logo.png" alt="Google Logo" />
+        <img src="certificates/coursera logo.png" alt="Google Logo" />
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
