--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Header Section -->
+  <!-- Header -->
   <header class="header" id="main-header">
     <div class="logo">Naveen Sharma</div>
     <nav class="nav">
       <a href="#">Home</a>
       <a href="#certifications">Licenses & Certifications</a>
+      <a href="#wins">Small Wins</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -23,8 +24,8 @@
   <!-- Hero Section -->
   <section class="hero" id="hero">
     <div class="hero-content">
-      <h1>Hello</h1>
-      <p>Analyst Specializing in Transforming Data into Actionable Insights.</p>
+      <h1>Hi, I'm Naveen Sharma</h1>
+      <p>Data Analyst transforming raw data into meaningful business insights using SQL, Excel, and visualization tools.</p>
     </div>
   </section>
 
@@ -66,7 +67,7 @@
 
       <!-- Certification 5 -->
       <div class="project-card">
-        <img src="certificates/coursera logo.svg" alt="coursera Logo" />
+        <img src="certificates/coursera logo.svg" alt="Coursera Logo" />
         <h3>Introduction to Relational Database and SQL</h3>
         <p>By: Coursera</p>
         <a href="certificates/Coursera Introduction to Relational Database and SQL.pdf" target="_blank" class="btn">View Certificate</a>
@@ -74,7 +75,19 @@
     </div>
   </section>
 
-  <!-- Footer Section (Contact) -->
+  <!-- Small Wins Section -->
+  <section id="wins" class="wins">
+    <h2>Small Wins</h2>
+    <ul class="wins-list">
+      <li><i class="fas fa-check-circle"></i> Completed 5 foundational data analysis courses</li>
+      <li><i class="fas fa-check-circle"></i> Built and deployed a personal portfolio website</li>
+      <li><i class="fas fa-check-circle"></i> Learned version control with GitHub</li>
+      <li><i class="fas fa-check-circle"></i> Practiced relational database design using SQL</li>
+      <li><i class="fas fa-check-circle"></i> Consistently working on enhancing visualization skills</li>
+    </ul>
+  </section>
+
+  <!-- Contact Section -->
   <footer class="footer" id="contact">
     <h3>Get in Touch!</h3>
     <div class="social-icons">
