--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
       <a href="#wins">Small Wins</a>
       <a href="#contact">Contact</a>
     </nav>
+<button id="dark-toggle" aria-label="Toggle Dark Mode">
+  <i class="fas fa-moon"></i>
+</button>
+
+<button id="nav-toggle" class="nav-toggle" aria-label="Toggle Navigation">
+  <i class="fas fa-bars"></i>
+</button>
+  
   </header>
 
   <!-- Hero Section -->
