--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
   <script defer src="script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
 <body>
-  <!-- Header -->
+  <!-- Header Section -->
   <header class="header" id="main-header">
     <div class="logo">Naveen Sharma</div>
-    <nav class="nav">
+    <nav class="nav" id="navbar">
       <a href="#">Home</a>
       <a href="#certifications">Licenses & Certifications</a>
       <a href="#contact">Contact</a>
     </nav>
-<button id="dark-toggle" aria-label="Toggle Dark Mode">
-  <i class="fas fa-moon"></i>
-</button>
-
-<button id="nav-toggle" class="nav-toggle" aria-label="Toggle Navigation">
-  <i class="fas fa-bars"></i>
-</button>
-  
+    <button class="hamburger" id="hamburger">
+      <i class="fas fa-bars"></i>
+    </button>
   </header>
 
   <!-- Hero Section -->
   <section class="hero" id="hero">
     <div class="hero-content">
-      <h1>Hi, I'm Naveen Sharma</h1>
-      <p>Data Analyst transforming raw data into meaningful business insights using SQL, Excel, and visualization tools.</p>
+      <h1>Hello</h1>
+      <p>Turning complex data into clear, actionable insights.</p>
     </div>
   </section>
 
@@ -82,8 +82,7 @@
     </div>
   </section>
 
-
-  <!-- Contact Section -->
+  <!-- Footer Section -->
   <footer class="footer" id="contact">
     <h3>Get in Touch!</h3>
     <div class="social-icons">
